--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -3,10 +3,10 @@ name: C++ CI
 on:
   push:
     branches:
-      - main  # trigger on push to main branch
+      - master  # trigger on push to main branch
   pull_request:
     branches:
-      - main  # trigger on pull requests to main branch
+      - master  # trigger on pull requests to main branch
 
 jobs:
   build:
