--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v2  # Checkout the repository content to the runner
 
     - name: Install g++
-      run: sudo apt-get install g++
+      run: sudo apt-get install g++ libgtest-dev
 
     - name: Build
       run: |
