--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -3,10 +3,10 @@ name: C++ CI
 on:
   push:
     branches:
-      - master  # trigger on push to main branch
+      - master  # trigger on push to master branch
   pull_request:
     branches:
-      - master  # trigger on pull requests to main branch
+      - master  # trigger on pull requests to master branch
 
 jobs:
   build:
@@ -16,14 +16,16 @@ jobs:
     - uses: actions/checkout@v2  # Checkout the repository content to the runner
 
     - name: Install g++
-      run: sudo apt-get install g++ libgtest-dev
+      run: |
+        sudo apt-get update  
+        sudo apt-get install g++ libgtest-dev libsfml-dev cmake
+    
+    - name: Test
+      run: |
+        make test
 
     - name: Build
       run: |
-        mkdir -p bin  # Create bin directory if it does not exist
-        g++ -Wall -Wextra -std=c++11 -Iinc -o bin/tic-tac-toe src/*.cpp main.cpp
+        make
 
-    - name: Test
-      run: |
-        g++ -Wall -Wextra -std=c++11 -Iinc -o bin/test src/*.cpp test.cpp -lgtest -lgtest_main -pthread
-        ./bin/test  # Execute the tests
+
