--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2  # Checkout the repository content to the runner
     
-    - name: Set up Node.js
+    - name: Set up Node.js 20.x
       uses: actions/setup-node@v2
       with:
         node-version: '20'
