--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2  # Checkout the repository content to the runner
     
+    - name: Clear GitHub Actions cache
+      run: |
+        npm cache clean --force
+        yarn cache clean
+        rm -rf ~/.npm
+        rm -rf ~/.yarn
+
     - name: Set up Node.js 20.x
       uses: actions/setup-node@v2
       with:
